brat/test/golden/error/portpull-ambiguous.brat
id(Nat) -> Nat
id = x => x

-- This should fail because there are multiple ports called "0"
id2(Nat, Nat) -> Nat, Nat
id2 = x, y => (id,id)(0:x, y)
