brat/test/golden/error/portpull-ambiguous.brat.golden
Error in test/golden/error/portpull-ambiguous.brat on line 6:
id2 = x, y => (id,id)(0:x, y)
                     ^^^^^^^^

  Port 0 is ambiguous in (0 :: Nat, 0 :: Nat)

